Fix app overflow

--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -2,4 +2,8 @@
     background-color: @main-fill-lighter;
     padding: @unit-2 0;
     min-height: 100vh;
+    width: 100vw;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
